# GazeDialogue

./: .travis  .travis.yml  CMakeLists.txt  CMakeLists_det.txt  LICENSE  README.md  gazeBehavior_0.txt
app/scripts/: app-icub.xml  iCubGui.xml  pupil_system.xml  system.xml
app/scripts_SIM/: pupil_iCubSim-follower-nonmutual.xml  pupil_iCubSim-follower.xml  pupil_iCubSim-leader-mutual.xml  pupil_iCubSim-leader-nonmutual.xml  pupil_iCubSim-leader.xml  pupil_iCubSim.xml  pupil_system.xml  system.xml
connectivity/pupil/: Pupil_Stream_To_Yarp.cbp  Pupil_Stream_To_Yarp.depend  Pupil_Stream_To_Yarp.layout  README.md  Untitled1  main.cpp
controller/: CMakeLists.txt  README.md  bashrc_icub.txt
controller/app/: GazeDialogue_follower.xml  GazeDialogue_leader.xml  iCub_startup.xml
controller/include/: init.h
controller/include/manual/: configure.h  init.h  passing.h  placing.h
controller/src/: icub_leader.cpp
controller/src/extras/: CvMC.h  compute.cpp  configure.cpp  helpers.cpp
controller/src/manual/: compute.cpp  configure.cpp  helpers.cpp  main.cpp  passing.cpp  placing.cpp
detection/: README.md  face_detector_gpu.py  gaze_behaviour.py  main.py  main_offline.py  pupil_lsl_yarp.py  requirements.txt  requirements_ubuntu16.txt  requirements_ubuntu20.txt
detection/pupil_data_test/exports/000/: export_info.csv  gaze_positions.csv  pupil_positions.csv  world_viz_timestamps.npy
include/: compute.h  helpers.h  init.h
python/: README.md  ball_tracking.py  balltracking.py  faceDetector.py  face_detector.py  face_detector_gpu.py  gazeBehaviour.py  gaze_behaviour.py  icub-detection_tfAPI.ipynb  main.py  main_offline.py  onlineDetection.py  pupil_lsl_yarp.py  redBalltracking.py  test.py
python/icub_detector/: generate_tfrecord.py  ssd_mobilenet_v1_pets.config  xml_to_csv.py
python/icub_detector/data/: test.record  test_labels.csv  train.record  train_labels.csv
python/icub_detector/training/: icub_detection.pbtxt
python/training-data/s1/: Gio1  Gio10  Gio11  Gio12  Gio2  Gio3  Gio4  Gio5  Gio6  Gio7  Gio8  Gio9  GioFace1
src/: CvHMM.h  detector.cpp  helpers.cpp  icub_follower.cpp  icub_leader.cpp  icub_leader_.cpp  icub_pupil.cpp
src/extras/: CvHMM.h  CvMC.h  compute.cpp  configure.cpp
